fix error overflow + remove en i18n

--- a/assets/scss/common/common.scss
+++ b/assets/scss/common/common.scss
@@ -24,6 +24,8 @@ html,body {
   background: white;
   height: 100%;
 
+  overflow-x:hidden;
+
   &.loading {
     overflow: hidden;
   }
